--- a/modules/provider-gt2/CHANGES.txt
+++ b/modules/provider-gt2/CHANGES.txt
@@ -1,3 +1,7 @@
+(01/28/2006)
+
+*** Updated file resource exceptions
+
 -------------------------------2.3----------------------------------
 
 (11/28/2006)
