--- a/src/cog/modules/provider-local/CHANGES.txt
+++ b/src/cog/modules/provider-local/CHANGES.txt
@@ -1,3 +1,7 @@
+(01/28/2006)
+
+*** Updated exceptions in file resource
+
 -----------------------------2.1----------------------------------
 
 (11/28/2006)
