--- a/modules/provider-webdav/CHANGES.txt
+++ b/modules/provider-webdav/CHANGES.txt
@@ -1,3 +1,7 @@
+(01/28/2007)
+
+*** Updated file resource exceptions
+
 -------------------------------2.1----------------------------------
 
 (11/28/2006)
