--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+(01/30/07)
+
+*** Fixed vdlc to return a non-zero exit code when text->xml conversion
+    fails.
+
 (01/28/07)
 
 *** Added support for non-standard attributes on the GLOBUS
