--- a/src/cog/modules/abstraction-common/CHANGES.txt
+++ b/src/cog/modules/abstraction-common/CHANGES.txt
@@ -1,3 +1,8 @@
+(02/05/2007)
+
+*** Added two methods to FileResource to allow transfers that provide
+    progress information
+
 (01/28/2007)
 
 *** Changed IOExceptions in file resources to IrrecoverableResourceExcepion.
