--- a/modules/karajan/CHANGES.txt
+++ b/modules/karajan/CHANGES.txt
@@ -1,3 +1,7 @@
+(02/05/2007)
+
+*** Added file resource throttling
+
 (01/21/2007)
 
 *** [u]parallelFor didn't handle concurrent exceptions correctly.
