--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,10 @@
+(02/11/07)
+
+*** SwiftScript syntax change: The function invocation (i=q)=f(1) must 
+    be written with the () parentheses surrounding the return variables.
+    Previously, the parentheses were optional, and the same could be written
+    as i=q=f(1); This is no longer the case.
+
 (02/10/07)
 
 *** On-going parser changes primarily aimed at producing more user-friendly
