--- a/src/cog/modules/karajan/CHANGES.txt
+++ b/src/cog/modules/karajan/CHANGES.txt
@@ -1,3 +1,7 @@
+(02/14/2007)
+
+*** Fixed some issues with comments not being parsed correctly
+
 (02/05/2007)
 
 *** Added file resource throttling
