--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+(03/02/07)
+
+*** Added log message to print full stack trace of exceptions
+    that cause Swift to fail
+
 (03/01/07)
 
 *** Fixed @arg.
