--- a/modules/gridant/CHANGES.txt
+++ b/modules/gridant/CHANGES.txt
@@ -1,4 +1,6 @@
-(05/02/2005)	Updated to work with *abstraction* packages
+(05/02/2005)	
+
+*** Updated to work with *abstraction* packages
 ------------------------------1.1------------------------------
 
 ------------------------------1.0------------------------------
