--- a/cog/modules/provider-condor/CHANGES.txt
+++ b/cog/modules/provider-condor/CHANGES.txt
@@ -1,3 +1,5 @@
-(04/18/2005)	renamed this module from "core-provider-condor" to 
-		"provider-condor"
+(04/18/2005)
+
+*** renamed this module from "core-provider-condor" to 
+    "provider-condor"
 ----------------------2.0--------------------------------
