--- a/modules/provider-gt2ft/CHANGES.txt
+++ b/modules/provider-gt2ft/CHANGES.txt
@@ -1,4 +1,6 @@
-(06/08/2005)    Added support for FORK and PBS JobManagers in
-                org.globus.cog.abstraction.impl.execution.gt2ft.JobSubmissionTaskHandler.java
+(06/08/2005)
+
+*** Added support for FORK and PBS JobManagers in
+    org.globus.cog.abstraction.impl.execution.gt2ft.JobSubmissionTaskHandler.java
 
 ---------------------- 1.0 --------------------------------
